<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">
    <item
        android:id="@+id/contacts"
        android:icon="@drawable/selector_home_contract"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/create_group_chat"
        android:icon="@drawable/ic_group_chat"
        android:orderInCategory="100"
        android:title="@string/menu_create_group_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/message_add_friend"
        android:icon="@drawable/ic_add_friend"
        android:orderInCategory="100"
        android:title="@string/menu_add_friend"
        app:showAsAction="never"/>
    <item
        android:id="@+id/message_saoyisao"
        android:icon="@drawable/ic_sao_yi_sao"
        android:orderInCategory="100"
        android:title="@string/saoyisao"
        app:showAsAction="never" />
    <item
        android:id="@+id/message_shoubi"
        android:icon="@drawable/ic_shou_bi"
        android:orderInCategory="100"
        android:title="@string/menu_shoubi"
        app:showAsAction="never" />
</menu>
