<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDivider">

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_h"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ripple_comon_selector"
        android:gravity="center"
        android:text="@string/save_img"
        android:textColor="@color/colorBlackTextNormal"
        android:textSize="@dimen/textLarge"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@+id/tvSave" />

    <TextView
        android:id="@+id/tvShibieQr"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="@dimen/mine_item_h"
        android:background="@drawable/ripple_comon_selector"
        android:gravity="center"
        android:text="@string/shibie_qr"
        android:textColor="@color/colorBlackTextNormal"
        android:textSize="@dimen/textLarge"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_h"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/marginViewLittle"
        android:background="@drawable/ripple_comon_selector"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorBlackTextHint"
        android:textSize="@dimen/textLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShibieQr" />
</android.support.constraint.ConstraintLayout>